--- a/event/20151101/index.html
+++ b/event/20151101/index.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<link rel="stylesheet" href="u.css">
+<head><meta charset="utf-8"/><title>西明日香トークショー in ソフィア祭　−あっちゃんとチューニング...しよっ？−</title><meta name="viewport" content="width=device-width, initial-scale=1"/><meta property="og:title" content="西明日香トークショー in ソフィア祭　−あっちゃんとチューニング...しよっ？−"/><meta property="og:site_name" content="西明日香トークショー in ソフィア祭　−あっちゃんとチューニング...しよっ？−"/><meta property="og:description" content="西明日香トークショー in ソフィア祭　−あっちゃんとチューニング...しよっ？−の特設サイト"/><meta property="og:type" content="website"/><meta property="og:image" content="/assets/icon.jpeg"/><meta name="twitter:card" content="summary"/><meta name="twitter:site" content="@koeai_sophia"/><meta name="twitter:title" content="西明日香トークショー in ソフィア祭　−あっちゃんとチューニング...しよっ？−"/><meta name="twitter:description" content="西明日香トークショー in ソフィア祭　−あっちゃんとチューニング...しよっ？−の特設サイト"/><meta name="twitter:image" content="/assets/header.jpg"/><link rel="stylesheet" href="u.css">
 <title>西明日香トークショー in ソフィア祭　−あっちゃんとチューニング...しよっ？−</title><style>html, body{
 	margin: 0px;
 	width: 100%;
